# dbus-playground

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: main.rs
service/: Cargo.toml
service/src/: main.rs
