[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
